# grafos-u1

./: Bfs.h  CheckBipartite.h  Dfs.h  DivideBlocks.h  GraphAlgorithms.h  GraphIO.h  IGraph.h  Makefile  README.md  main.cpp  q1.cpp  q10.cpp  q11.cpp  q13.cpp  q14.cpp  q16.cpp  q17.cpp  q2.cpp  q20.cpp  q4.cpp  q5.cpp  q6.cpp  q8.cpp  q9.cpp  test-all.sh
data/: DIGRAFO1.txt  DIGRAFO_0.txt  DIGRAFO_2.txt  DIGRAFO_3.txt  GRAFO_0.txt  GRAFO_1.txt  GRAFO_2.txt  GRAFO_3.txt
graph/: AdjacencyMatrixGraph.h  CMakeLists.txt  DirectedAdjacencyListGraph.h  DirectedAdjacencyMatrixGraph.h  DirectedIncidenceMatrixGraph.h  IGraph.h  UndirectedAdjacencyListGraph.h  UndirectedAdjacencyMatrixGraph.h  UndirectedIncidenceMatrixGraph.h  graph_tests.cpp
tests/: q1.cpp  q10.cpp  q11.cpp  q12.cpp  q13.cpp  q14.cpp  q15.cpp  q16.cpp  q17.cpp  q18.cpp  q19.cpp  q2.cpp  q20.cpp  q3.cpp  q4.cpp  q5.cpp  q6.cpp  q7.cpp  q8.cpp  q9.cpp
